<resources>

    <string name="app_name">@string/property_wuyefuwu</string>

    <!-- 公共 -->
    <string name="property_common_back">返回</string>
    <string name="property_common_select_type_arrow">></string>
    <string name="property_wuyefuwu">物业服务</string>
    <string name="property_common_xuanzebaoxiuleixing">选择报修类型</string>
    
    <string name="property_common_paishezhaopian_title">拍摄照片</string>
    <string name="property_common_wuyedianhua">直接拨打物业电话</string>
    <string name="property_common_publish_information">发布信息</string>
    <string name="property_common_call_contact_phone">直接拨打联系人电话</string>
    <string name="property_common_modify_info">修改信息</string>
    <string name="property_common_cancel_publish">取消发布</string>
    <string name="property_common_alert_dialog_ok">选择</string>
    <string name="property_common_alert_dialog_cancel">取消</string>
    <string name="property_common_submit_pingjia">提交评价</string>
    <string name="property_common_delTitle">删除</string>
    <string name="property_common_delYes">是</string>
    <string name="property_common_delNo">否</string>
    <string name="property_common_delContent">确定删除?</string>
    <string name="property_common_uploading_defaul"></string>
    <string name="property_common_uploading_hint">上传中...</string>
    <string name="property_common_upload_failed">上传失败</string>
    <string name="property_common_upload_success">上传成功</string>
    <string name="property_common_upload_control_max">只允许最多上传三张图片</string>
    <string name="property_common_upload_control_hint">图片正在上传，请等会提交</string>

    <!-- 物业报修 -->
    <string name="property_home_wuyebaoxiu">物业报修</string>
    <string name="property_wuyebaoxiu_baoxiudandetail">报修单详情</string>
    <string name="property_wuyebaoxiu_baoxiuwentimiaoshu">报修问题描述</string>
    <string name="property_wuyebaoxiu_now_action_baoxiu">立刻报修</string>
    <string name="property_wuyebaoxiu_baoxiudan_wodebaodan">我的报修单</string>
    <string name="property_wuyebaoxiu_baoxiudan">报修单</string>
    <string name="property_wuyebaoxi_baoxiudan_item_time">报修时间</string>
    <string name="property_wuyebaoxi_baoxiudan_item_name">报修单名称</string>
    <string name="property_wuyebaoxi_baoxiudan_item_detail">详情></string>
    <string name="property_wuyebaoxi_baoxiudan_item_type">报修类型</string>
    <string name="property_wuyebaoxi_baoxiudan_item_zhaopian">照片</string>
    <string name="property_wuyebaoxi_baoxiudan_item_paidan_time">派单时间</string>
    <string name="property_wuyebaoxi_baoxiudan_item_weixiuren">维&#160;&#160;修&#160;&#160;人</string>
    <string name="property_wuyebaoxi_baoxiudan_item_wancheng_time">完成时间</string>
    <string name="property_wuyebaoxi_baoxiudan_item_wancheng_result">维修结果</string>
    <string name="property_wuyebaoxi_baoxiudan_item_wancheng_fee">维修费用</string>
    <string name="property_wuyebaoxi_baoxiudan_item_yonghupingjia">用户评价</string>
    <string name="property_wuyebaoxi_baoxiudan_item_wancheng_zhiliang">维修质量</string>
    <string name="property_wuyebaoxi_baoxiudan_item_wancheng_taidu">维修态度</string>
    <string name="property_wuyebaoxi_baoxiudan_item_wancheng_jishixing">及时性</string>
    <string name="property_wuyebaoxi_baoxiudan_item_wancheng_price">维修价格</string>

    <!-- 投诉建议 -->
    <string name="property_home_tousujianyi">投诉建议</string>
    <string name="property_tousujianyi_xuanzetousuleixing">选择投诉类型</string>
    <string name="property_tousujianyi_action_tousu">立刻投诉</string>
    <string name="property_tousujianyi_tousu_detail">投诉建议详情</string>
    <string name="property_tousujianyi_tousuwentimiaoshu">投诉问题描述</string>
    <string name="property_tousujianyi_mine_suggest">我的投诉建议</string>
    <string name="property_tousujianyi_tousudan_item_time">投诉时间</string>
    <string name="property_tousujianyi_tousudan_item_name">投诉名称</string>
    <string name="property_tousujianyi_tousudan_item_type">投诉类型</string>
    <string name="property_tousujianyi_tousudan_item_wuyefankui">物业反馈</string>
    <string name="property_tousujianyi_tousudan_item_fankuishijian">反馈时间</string>
    <string name="property_tousujianyi_tousudan_item_tousu_taidu">服务态度</string>
    <string name="property_tousujianyi_tousudan_item_tousu_jishixing">反馈及时性</string>
    <string name="property_tousudan_detail">投诉单详情</string>

    <!-- 物业通知 -->
    <string name="property_home_wuyetongzhi">物业通知</string>

    <!-- 房屋租售 -->
    <string name="property_home_fangwuzulin">房屋租赁</string>
    <string name="property_fangwuzulin_publish_fangyuan">发布房源</string>
    <string name="property_fangwuzulin_xuanzeyewuleixing">选择业务类型</string>
    <string name="property_fangwuzulin_arealeixing">选择面积</string>
    <string name="property_fangwuzulin_position">位&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;置</string>
    <string name="property_fangwuzulin_item_pulish_time">发布时间</string>
    <string name="property_fangwuzulin_item_position">位&#160;&#160;&#160;&#160;置</string>
    <string name="property_fangwuzulin_publish_position">位&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;置</string>
    <string name="property_fangwuzulin_item_tel">电&#160;&#160;&#160;&#160;话</string>
    <string name="property_fangwuzulin_item_yewuleixing">业务类型</string>
    <string name="property_fangwuzulin_item_area">面&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;积</string>
    <string name="property_fangwuzulin_item_huxing">户&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;型</string>
    <string name="property_fangwuzulin_xuanzehuxing">选择户型</string>
    <string name="property_fangwuzulin_mine">我的房源</string>
    <string name="property_fangwuzulin_fangyuanfabu_peitaomiaoshu">配套描述</string>
    <string name="property_fangwuzulin_fangyuanfabu_shurupeitaomiaoshu">输入配套描述</string>
    <string name="property_fangwuzulin_fangyuanxinxi">房源信息</string>

    <!-- 二手物品 -->
    <string name="property_home_ershouwupin">二手物品</string>
    <string name="property_ershouwupin_wupinfabu">物品发布</string>
    <string name="property_ershouwupin_xuanzewupinfenlei">选择物品分类</string>
    <string name="property_ershouwupin_pinpaifenlei">选择品牌</string>
    <string name="property_ershouwupin_xuanzexinjiu">选择新旧</string>
    <string name="property_ershouwupin_item_pulish_time">发布时间</string>
    <string name="property_ershouwupin_item_wupmingcheng">物品名称</string>
    <string name="property_ershouwupin_item_xinjiu">新&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;旧</string>
    <string name="property_ershouwupin_mine">我的物品</string>
    <string name="property_ershouwupin_wupinfabu_wupinmiaoshu">物品描述</string>
    <string name="property_ershouwupin_wupinfabu_shuru_wupinmiaoshu">请输入物品描述</string>
    <string name="property_ershouwupin_wupinfabu_lianxiren">联&#160;&#160;系&#160;&#160;人</string>
    <string name="property_ershouwupin_wupinfabu_dianhu">联系电话</string>
    <string name="property_ershouwupin_wupin_detail">物品信息</string>
    <string name="property_ershouwupin_detail_wupinfenlei">物品分类</string>
    <string name="property_ershouwupin_detail_pinpai">品&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;牌</string>
    <string name="property_ershouwupin_wupinmingchen">物品名称</string>
</resources>