<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/property_color_common_home_bg"
    android:orientation="vertical" >

    <include layout="@layout/property_common_header" />

    <include
        android:id="@+id/baoxiu_time"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        layout="@layout/property_common_text_value" />

    <include
        android:id="@+id/baoxiu_type"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        layout="@layout/property_common_text_value" />

    <include
        android:id="@+id/baoxiu_problem"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        layout="@layout/property_common_text_value" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/property_commont_color_select_type_bg"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/property_wuyebaoxi_baoxiudan_item_zhaopian"
            android:textColor="@color/property_color_common_title" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/baoxiu" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baoxiu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical" >

        <include
            android:id="@+id/baoxiu_paidan_time"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            layout="@layout/property_common_text_value" />

        <include
            android:id="@+id/baoxiu_paidan_weixiuren"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            layout="@layout/property_common_text_value" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical" >

        <include
            android:id="@+id/baoxiu_wancheng_time"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            layout="@layout/property_common_text_value" />

        <include
            android:id="@+id/baoxiu_wancheng_result"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            layout="@layout/property_common_text_value" />

        <include
            android:id="@+id/baoxiu_wancheng_fee"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            layout="@layout/property_common_text_value" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/property_commont_color_select_type_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/property_wuyebaoxi_baoxiudan_item_yonghupingjia"
            android:textColor="@color/property_color_common_title" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/property_wuyebaoxi_baoxiudan_item_wancheng_zhiliang"
                android:textColor="@color/property_color_common_title" />

            <TextView
                android:id="@+id/wancheng_zhiliang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/property_wuyebaoxi_baoxiudan_item_wancheng_taidu"
                android:textColor="@color/property_color_common_title" />

            <TextView
                android:id="@+id/wancheng_taidu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/property_wuyebaoxi_baoxiudan_item_wancheng_jishixing"
                android:textColor="@color/property_color_common_title" />

            <TextView
                android:id="@+id/wancheng_jishixing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/property_wuyebaoxi_baoxiudan_item_wancheng_price"
                android:textColor="@color/property_color_common_title" />

            <TextView
                android:id="@+id/wancheng_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>